# interview_hackathon

./: .dockerignore  .gitattributes  Dockerfile.railway  README.md  app.db  data_engineering_mavs_final.ipynb  env.template  gpu_config.json  invoke.yml  logging.yaml  mlruns.db  package-lock.json  package.json  pyproject.toml
.devcontainer/: .dockerignore  .env.template  Dockerfile  devcontainer.json  docker-compose.yml  enhanced_gpu_test_functions.py  gpu_bootstrap.sh  opening.sh  postCreate_rtx5080.sh  postcreate.sh  pyproject.toml  rebuild.sh  rtx5080_repair.sh  setup.sh  setup_env.sh  tasks.py  troubleshoot.sh  verify_env.py
.devcontainer/scripts/: test-gpu.sh
api/: __init__.py  app.db  config.yaml  env.dev  env.prod  env.staging  env.template  logging.yaml  mlruns.db  pyproject.toml  railway.json  start.sh
api/app/: __init__.py  db.py  main.py  security.py
api/app/core/: config.py  env_utils.py
api/app/middleware/: __init__.py  concurrency.py
api/app/ml/: __init__.py  builtin_trainers.py  pytensor_bootstrap.py  utils.py
api/app/schemas/: bayes.py  cancer.py  iris.py  train.py
api/app/services/ml/: model_service.py
api/app/utils/: __init__.py  env_sanitizer.py
api/scripts/: config-sync.mjs  ensure_models.py  env-switch.mjs  promote.py  seed_user.py
api/src/: nba_complete_pipeline.py
api/src/airflow_project/: pyproject.toml  requirements.txt  run_complete_pipeline.py
api/src/airflow_project/dags/: mavs_lineups_assetaware_dag.py
api/src/airflow_project/data/mavs_data_engineer_2025/: box_HOU-DAL.csv  pbp_HOU-DAL.csv  pbp_HOU-DAL_sample.csv  pbp_action_types.csv  pbp_event_msg_types.csv  pbp_option_types.csv
api/src/airflow_project/data/mavs_data_engineer_2025/exports/: base_dataset_violations.txt  enhanced_method_flags.csv  method_comparison_summary.csv  method_effectiveness_report.txt  project1_lineups_traditional.csv  project1_lineups_traditional_with_6th_player.csv  project2_players_enhanced.csv  project2_players_traditional.csv  quality_report.txt  traditional_lineup_violations.csv  violation_summary.txt
api/src/airflow_project/data/mavs_data_engineer_2025/exports/debug_points_audit/: 001_comprehensive_points_flow.csv  002_hou_scoring_events_detailed.csv  003_hou_lineup_attribution_breakdown.csv  004_pbp_to_step4_cross_reference.csv  005_points_transformation_summary.csv
api/src/airflow_project/data/mavs_data_engineer_2025/exports/final_submission/: project1_lineups_FINAL.csv  submission_validation_report.json
api/src/airflow_project/data/mavs_data_engineer_2025/output/: lineups.parquet  players.parquet
api/src/airflow_project/data/mavs_data_engineer_2025/processed/: eda_report.md  eda_report_optimized.md  pbp_enriched.parquet  player_roster.parquet  roster_optimized.parquet  shots.parquet  shots_optimized.parquet  shots_processed.parquet
api/src/airflow_project/eda/: __init__.py  mavs_eda.py
api/src/airflow_project/eda/data/: nba_data_loader.py  nba_entities_extractor.py  nba_final_export.py  nba_final_export.py.backup  nba_pbp_processor.py  nba_possession_engine.py  nba_possession_engine.py.backup
api/src/airflow_project/eda/pipeline/: __init__.py  mavs_lineups.py
api/src/airflow_project/eda/utils/: nba_pipeline_analysis.py
api/src/airflow_project/reports/: basic_lineup_flags.csv  basic_lineup_state.csv  comprehensive_flags_analysis.csv  enhanced_flags.csv  enhanced_lineup_flags.csv  enhanced_lineup_state.csv  minutes_basic.csv  minutes_compare.csv  minutes_enhanced.csv  minutes_offenders.csv  minutes_validation_full.csv  run_summary.json  traditional_vs_enhanced_comparison.csv  unique_lineups_enhanced.csv  unique_lineups_enhanced_5.csv  unique_lineups_traditional.csv  unique_lineups_traditional_5.csv  unique_lineups_traditional_all.csv
api/src/airflow_project/tests/: test_comprehensive_pipeline.py
api/src/airflow_project/utils/: __init__.py  config.py  data_analysis_validator.py  data_check_utils.py  lineup_verification.py  nba_repository.py  performance_benchmark.py  player_analysis_utility.py  utils.py
api/src/registry/: __init__.py  registry.py  types.py
api/src/trainers/: __init__.py  base.py  iris_rf_trainer.py
api/tests/: monitor_redis.py  test_protection_systems_fixed.py
data/quality_reports/: example_report.csv  example_report.html  example_report.json  example_report.md
notebooks/4090_gpu/: docker_uv_env_setup_4090.ipynb
notebooks/5080_gpu/: basic_models.ipynb  environment_uv_docker_jax_pytorch_mlflow_portfriendly_5080_allenabled_efficient_jaxgpu_efficient.ipynb
notebooks/backend/api/: backend_api_postworking_fixed_clitested_mladjustments.ipynb
notebooks/backend/data_engineering/: data_engineering.ipynb
notebooks/frontend/: frontend_web_postworking_fixed_clitested_mladjustments.ipynb
scripts/: config-to-env.mjs  diagnose-vite-env.mjs  frontend-clean.js  frontend-diagnose.js  railway_login.ps1  sync-env.js  test-gpu.sh  verify-frontend-lock.js
tests/: diagnose_devcontainer.py  enhanced_gpu_test_harness.py  test_bayesian_trainer.py  test_pytorch_jax_gpu.py  test_rate_limits.py
web/: .gitignore  __vite_api_url.meta.json  config.yaml  env.template  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.ts
web/src/: App.css  App.jsx  index.css  main.tsx
web/src/components/: CancerForm.jsx  IrisForm.jsx  Layout.jsx  Login.jsx  MLModelFrontend.jsx  ModelTraining.jsx  ResultsDisplay.jsx
web/src/debug/: GlobalDebug.js
web/src/services/: api.js
