[project]
name = "cancer_bayes_iris_env"
version = "0.1.0"
description = "PyTorch and JAX GPU docker container (TensorFlow removed)"
authors = [{ name = "Geoffrey Hadfield" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
  "pandas>=1.2.0",
  "numpy>=1.20.0",
  "matplotlib>=3.4.0",
  "mlflow>=2.10.2",
  "mlflow-skinny>=2.10.2",
  "scikit-learn>=1.4.2",
  "pymc>=5.0.0",
  "arviz>=0.14.0",
  "statsmodels>=0.13.0",
  "jupyterlab>=3.0.0",
  "seaborn>=0.11.0",
  "tabulate>=0.9.0",
  "shap>=0.40.0",
  "xgboost>=1.5.0",
  "lightgbm>=3.3.0",
  "catboost>=1.2.8,<1.3.0",
  "scipy>=1.7.0",
  "shapash[report]>=2.3.0",
  "shapiq>=0.1.0",
  "explainerdashboard==0.5.1",
  "ipywidgets>=8.0.0",
  "nutpie>=0.7.1",
  "numpyro>=0.18.0,<1.0.0",
  "pytensor>=2.18.3",
  "aesara>=2.9.4",
  "tqdm>=4.66.5",
  "pyarrow>=12.0.0",
  "optuna>=3.0.0",
  "optuna-integration[mlflow]>=0.2.0",
  "omegaconf>=2.3.0,<2.4.0",
  "hydra-core>=1.3.2,<1.4.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "pydantic-settings",
  "kagglehub[pandas-datasets]>=0.3.12,<0.4.0",
  "duckdb~=1.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "flake8>=5.0.0",
  "mypy>=1.0.0",
  "invoke>=2.2",
]

# GPU frameworks for Linux only (TensorFlow completely removed)
linux-gpu = [
  "torch      ; platform_system == 'Linux'",
  "torchvision; platform_system == 'Linux'",
  "torchaudio ; platform_system == 'Linux'",
  "jax[cuda12-local]>=0.4.26 ; platform_system == 'Linux'",
]

memory-management = [
  "psutil>=5.9.0",
  "memory-profiler>=0.61.0",
]

[tool.pytensor]
device = "cuda"
floatX = "float32"
allow_gc = true
optimizer = "fast_run"

[tool.uv]
compile-bytecode = true
link-mode = "copy"
python-downloads = "never"

